[package]
name = "xphttpbridge"
version = "0.1.0"
edition = "2024"

[dependencies]
xplm = "0.4.2"
rust-ini = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
ahash = "0.8.12"
regex = "1.9.1"

[lib]
crate-type = ["cdylib"]
